--- a/vignettes/aorsf.Rmd
+++ b/vignettes/aorsf.Rmd
@@ -102,31 +102,63 @@ orsf_fit <- pbc_orsf |>
 
 ### Partial dependence
 
-`edema == 1` may modify the effect of `bili`. We can use the `orsf_pd_summary()` function (pd = partial dependence) to explore how these variables influence the expected prediction from ORSF. Below, we look at partial dependence at a prediction horizon of 5 years.
+Partial dependence shows the expected prediction from an ORSF model for a given set of predictor values.
 
-```{r}
+- `orsf_pd_summary()` shows summary values of predictions for the given set of predictor values
 
-# make a list containing the variable values you
-# want to compute partial dependence for
-pd_spec <- list(edema = c("0", "0.5", "1"),
-                bili = seq(0.6, 7.1, by = 0.1))
+    ```{r}
+    
+    # make a list containing the variable values you
+    # want to compute partial dependence for
+    pd_spec <- list(edema = c("0", "0.5", "1"),
+                    bili = seq(0.6, 7.1, by = 0.1))
+    
+    # orsf_pd_summary automatically computes pd for all combinations
+    # in the list (this can be turned off with expand_grid = FALSE)
+    pd_data <- orsf_pd_summary(object = orsf_fit, 
+                               pd_spec = pd_spec,
+                               expand_grid = TRUE, 
+                               pred_horizon = 365.25 * 5)
+    
+    ggplot(pd_data) +
+     aes(x = bili, y = mean, col = edema) +
+     geom_line() + 
+     labs(y = 'Predicted risk',
+          x = 'Bilirubin',
+          title = 'Partial dependence of bilirubin and edema') +
+     scale_y_continuous(limits = c(0, 1))
+    
+    ```
 
-# orsf_pd_summary automatically computes pd for all combinations
-# in the list (this can be turned off with expand_grid = FALSE)
-pd_data <- orsf_pd_summary(object = orsf_fit, 
+- `orsf_pd_ice()` shows predictions for each observation if the specified predictors are fixed at the specified predictor values. 
+
+    ```{r}
+    
+    # make a list containing the variable values you
+    # want to compute partial dependence for
+    pd_spec <- list(edema = c("0", "0.5", "1"),
+                    bili = seq(0.6, 7.1, by = 0.1))
+    
+    # orsf_pd_summary automatically computes pd for all combinations
+    # in the list (this can be turned off with expand_grid = FALSE)
+    pd_data <- orsf_pd_ice(object = orsf_fit, 
                            pd_spec = pd_spec,
                            expand_grid = TRUE, 
                            pred_horizon = 365.25 * 5)
-
-ggplot(pd_data) +
- aes(x = bili, y = mean, col = edema) +
- geom_line() + 
- labs(y = 'Predicted risk',
-      x = 'Bilirubin',
-      title = 'Partial dependence of bilirubin and edema') +
- scale_y_continuous(limits = c(0, 1))
-
-```
+    
+    pd_data$edema = paste("Edema =", pd_data$edema)
+    
+    ggplot(pd_data) +
+     aes(x = bili, y = pred, group = id_row) +
+     geom_line(color = 'grey', alpha = 0.25) + 
+     geom_smooth(group = 1) +
+     labs(y = 'Predicted risk',
+          x = 'Bilirubin',
+          title = 'Partial dependence of bilirubin and edema') +
+     scale_y_continuous(limits = c(0, 1)) +
+     facet_wrap(~ edema)
+    
+    ```
 
 ### Summarize ORSF models
 
