--- a/README.Rmd
+++ b/README.Rmd
@@ -54,7 +54,7 @@ remotes::install_github("bcjaeger/aorsf")
 
 ## Example
 
-The `orsf()` function is used to fit ORSF ensembles: 
+The `orsf()` function can fit several types of ORSF ensembles. My personal favorite is the accelerated ORSF because it has a great combination of prediction accuracy and computational efficiency (see [arXiv paper](https://arxiv.org/abs/2208.01129)).^2^
 
 ```{r}
 
@@ -65,11 +65,11 @@ fit <- orsf(data = pbc_orsf,
 
 ```
 
-The default routine to fit ORSF ensembles is the 'accelerated' ORSF - an algorithm based on Newton Raphson scoring that does very well in benchmarks of prediction accuracy and computational efficiency.^2^ In addition to the accelerated ORSF, `aorsf` can fit a broad range of ORSF ensembles (see ORSF CONTROL VIGNETTE (not yet written)). 
+ORSF CONTROL VIGNETTE (not yet written). 
 
 ### Inspect
 
-Printing the output from `orsf()` will give some descriptive statistics about the ensemble.
+Printing the output from `orsf()` will give some information and descriptive statistics about the ensemble.
 
 ```{r}
 
@@ -77,11 +77,13 @@ print(fit)
 
 ```
 
+See [`print.orsf_fit`](https://bcjaeger.github.io/aorsf/reference/print.orsf_fit.html) for a description of each line in the printed output.
+
 ### Variable importance
 
 The importance of individual variables can be estimated in three ways using `aorsf`:
 
-- **negation**: `r aorsf:::roxy_vi_describe('negate')`
+- **negation^2^**: `r aorsf:::roxy_vi_describe('negate')`
 
   ```{r}
   
@@ -105,19 +107,28 @@ The importance of individual variables can be estimated in three ways using `aor
   
   ```
 
-You can also supply your own R function to estimate out-of-bag error when using negation or permutation importance (see [oob vignette](https://bcjaeger.github.io/aorsf/articles/oobag.html)). 
+You can supply your own R function to estimate out-of-bag error when using negation or permutation importance (see [oob vignette](https://bcjaeger.github.io/aorsf/articles/oobag.html)). 
 
 ### Partial dependence
 
-`aorsf` can generate individual conditional expectation (ICE) and partial dependence: 
+`aorsf` can generate individual conditional expectation (ICE) and partial dependence (PD): 
 
-- ICE is the expected predicted value for an individual observation. ICE can be used to show how the prediction for an observation changes when a predictor changes.
-
-- partial dependence is a multi-variable adjusted expected predicted value of an ORSF ensemble.
+- ICE shows how the predicted value for an observation changes when a predictor changes. `orsf_ice()`, the function to compute ICE values in `aorsf`, returns ICE for all observations in the data you supply it. (If no data are supplied, the ORSF's training data are used)
 
   ```{r}
   
-  orsf_pd(fit, pd_spec = list(bili = c(1:5)))
+  # ICE values:
+  # predicted risk for a single observation with respect to bili.
+  
+  orsf_ice_oob(fit, pd_spec = list(bili = c(1:5)))[id_row == 2]
+  
+  ```
+
+- PD shows how the **expected** predicted value changes when a predictor changes. PD estimates the relationship between the model's prediction and a predictor, adjusting for other predictors.
+
+  ```{r}
+  
+  orsf_pd_oob(fit, pd_spec = list(bili = c(1:5)))
   
   ```
 
