vignettes dont like children

--- a/vignettes/pd.Rmd
+++ b/vignettes/pd.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Partial dependence and ICE curves with ORSF"
+title: "PD and ICE curves with ORSF"
 description: >
   Learn how to interpret ORSF models using partial dependence.
 output: rmarkdown::html_vignette
@@ -18,24 +18,21 @@ knitr::opts_chunk$set(
 )
 
 library(aorsf)
-
-docs_pd <- c("D:/aorsf/Rmd/orsf_pd_content_1.Rmd",
-             "D:/aorsf/Rmd/orsf_pd_content_2.Rmd")
-
-docs_ice <- c("D:/aorsf/Rmd/orsf_ice_content_1.Rmd",
-              "D:/aorsf/Rmd/orsf_ice_content_2.Rmd")
+library(ggplot2)
 
 ```
 
-## Partial dependence
+## Partial dependence (PD)
 
 `r aorsf:::roxy_pd_explain()`
 
-Begin by fitting an ORSF ensemble.
+Begin by fitting an ORSF ensemble. Set a prediction horizon of 5 years when we fit the ensemble so that any `aorsf` function that we pass this ensemble to will assume we want to compute predictions at 5 years.
 
 ```{r}
 
 library(aorsf)
+
+pred_horizon <- 365.25 * 5
 
 set.seed(329730)
 
@@ -46,23 +43,34 @@ pbc_orsf_test <- pbc_orsf[-index_train, ]
 
 fit <- orsf(data = pbc_orsf_train, 
             formula = Surv(time, status) ~ . - id,
-            oobag_pred_horizon = 365.25 * 5)
+            oobag_pred_horizon = pred_horizon)
 
 fit
 
 ```
 
-## Partial dependence two ways
 
-You can compute partial dependence two ways using a random forest:
+## Three ways to compute PD
+
+You can compute PD three ways with `aorsf`: 
+
+- using in-bag predictions for the training data
+
+  ```{r}
+  
+  pd_inb <- orsf_pd_inb(fit, pd_spec = list(bili = 1:5))
+  
+  pd_inb
+  
+  ```
 
 - using out-of-bag predictions for the training data
 
   ```{r}
   
-  pd_train <- orsf_pd_oob(fit, pd_spec = list(bili = 1:5))
+  pd_oob <- orsf_pd_oob(fit, pd_spec = list(bili = 1:5))
   
-  pd_train
+  pd_oob
   
   ```
 
@@ -78,28 +86,109 @@ You can compute partial dependence two ways using a random forest:
   
   ```
 
-Which should you use? Both!
+- in-bag PD indicates relationships that the model has learned during training. This is helpful if your goal is to interpret the model.
 
-- out-of-bag partial dependence indicates relationships that the model has learned during training. This is helpful if your goal is to interpret the model.
+- out-of-bag PD indicates relationships that the model has learned during training but using the out-of-bag data simulates application of the model to new data. if you want to test your model's reliability or fairness in new data but you don't have access to a large testing set.
 
-- partial dependence for new data shows how the model predicts outcomes for observations it has not seen. This is helpful if you want to test your model's reliability or fairness.
+- new data PD shows how the model predicts outcomes for observations it has not seen. This is helpful if you want to test your model's reliability or fairness.
 
-A reliable model should give roughly the same partial dependence values in its training and testing data, given the size of the training and testing data are both sufficient. 
-
-## Partial dependence for multiple variables
-
-Let's re-fit our ORSF to all available data before proceeding.
+Let's re-fit our ORSF to all available data before proceeding to the next sections.
 
 ```{r}
 
 set.seed(329730)
 
-fit <- orsf(pbc_orsf, Surv(time, status) ~ . -id)
+fit <- orsf(pbc_orsf, 
+            Surv(time, status) ~ . -id,
+            oobag_pred_horizon = pred_horizon)
+
+```
+
+## One variable, one horizon
+
+Computing PD for a single variable is straightforward:
+
+```{r}
+
+pd_sex <- orsf_pd_oob(fit, pd_spec = list(sex = c("m", "f")))
+
+pd_sex
+
+```
+
+The output shows that the expected predicted mortality risk for men is substantially higher than women at 5 years after baseline.
+
+## One variable, moving horizon
+
+What if the effect of a predictor varies over time? PD can show this.
+
+```{r}
+
+pd_sex_tv <- orsf_pd_oob(fit, pd_spec = list(sex = c("m", "f")),
+                         pred_horizon = seq(365, 365*5))
+
+ggplot(pd_sex_tv, aes(x = pred_horizon, y = mean, color = sex)) + 
+ geom_line()
+
+
+```
+
+From inspection, we can see that males have higher risk than females and the difference in that risk grows over time. This can also be seen by viewing the ratio of expected risk over time:
+
+```{r}
+
+library(data.table)
+
+ratio_tv <- pd_sex_tv[
+ , .(ratio = mean[sex == 'm'] / mean[sex == 'f']), by = pred_horizon
+]
+
+ggplot(ratio_tv, aes(x = pred_horizon, y = ratio)) + 
+ geom_line(color = 'grey') + 
+ geom_smooth(color = 'black', se = FALSE) + 
+ labs(x = 'time since baseline',
+      y = 'ratio in expected risk for males versus females')
 
 ```
 
 
-partial dependence can show the expected value of a model's predictions as a function of a specific predictor, or as a function of multiple predictors. For instance, we can estimate predicted risk as a joint function of `bili`, `edema`, and `trt`:
+## Multiple variables, marginally
+
+If you want to compute PD marginally for multiple variables, just list the variable values in `pd_spec` and specify `expand_grid = FALSE`. 
+
+```{r}
+
+pd_two_vars <-  
+ orsf_pd_oob(fit,
+             pd_spec = list(sex = c("m", "f"), bili = 1:5),
+             expand_grid = FALSE)
+
+pd_two_vars
+
+```
+
+Now would it be tedious if you wanted to do this for all the variables? You bet. That's why we made a function for that. As a bonus, the printed output is sorted from most to least important variables.
+
+```{r}
+
+pd_smry <- orsf_summarize_uni(fit)
+
+pd_smry
+
+```
+
+It's easy enough to turn this 'summary' object into a `data.table` for downstream plotting and tables.
+
+```{r}
+
+head(as.data.table(pd_smry))
+
+```
+
+
+## PD for multiple variables
+
+PD can show the expected value of a model's predictions as a function of a specific predictor, or as a function of multiple predictors. For instance, we can estimate predicted risk as a joint function of `bili`, `edema`, and `trt`:
 
 ```{r, -orsf_pd}
 
@@ -148,9 +237,55 @@ pbc_orsf$edema_05 <- NULL
 
 
 
-## Individual conditional expectations
+## Individual conditional expectations (ICE)
 
 `r aorsf:::roxy_ice_explain()`
 
+Just like PD, we can compute ICE using in-bag, out-of-bag, or testing data, and the same principles apply. We'll use out-of-bag estimates here.
 
+## Visualizing ICE curves
 
+Inspecting the ICE curves for each observation can help identify whether there is heterogeneity in a model's predictions. I.e., does the effect of the variable follow the same pattern for all the data, or are there groups where the variable impacts risk differently? 
+
+I am going to turn off boundary checking in `orsf_ice_oob` by setting `boundary_checks = FALSE`, and this will allow me to generate ICE curves that go beyond the 90th percentile of `bili`.
+
+  ```{r}
+  
+  pd_spec <- list(bili = seq(1, 10, length.out = 25))
+  
+  ice_oob <- orsf_ice_oob(fit, pd_spec, boundary_checks = FALSE)
+                       
+  ```
+
+For plots, it is helpful to scale the ICEs data. I subtract the initial value of predicted risk (i.e., when `bili = 1`) from each observation's conditional expectation values. So,
+
+- Every curve start at 0
+
+- The plot shows *change* in predicted risk as a function of `bili`.
+
+  ```{r}
+  
+  ice_oob[, pred := pred - pred[bili==1], by = id_row]
+  
+  ```
+  
+Now we can visualize the curves.
+
+```{r, -orsf_ice}
+
+library(ggplot2)
+
+ggplot(ice_oob, aes(x = bili, 
+                    y = pred, 
+                    group = id_row)) + 
+ geom_line(alpha = 0.15) + 
+ labs(y = 'Change in predicted risk') +
+ geom_smooth(se = FALSE, aes(group = 1))
+
+```
+
+From inspection of the figure,
+
+- Most of the individual slopes cluster around the overall trend - Good!
+
+- A small number of individual slopes appear to be flat. It may be helpful to investigate this further.
